# rust-assignments

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
.run/: Generate all assignments (zip).run.xml  Generate all assignments.run.xml  Test.run.xml
src/: main.rs
src/week1/: bcd.rs  mod.rs  plan.txt
src/week1/basics/: arithmetic.rs  fibonacci.rs  luhn.rs  mod.rs  numeric_properties.rs  quadratics.rs
src/week1/types/: all_about_vecs.rs  brackets.rs  integer_sizes.rs  mod.rs  ownership.rs  references.rs  stack.rs  tic_tac_toe.rs  tic_tac_toe_1.rs  tic_tac_toe_2.rs  vector3.rs  vector3_again.rs
src/week2/: bubble_sort.rs  is_it_sized.rs  mod.rs  stack.rs
src/week2/enums/: enum_definition.rs  mod.rs  safe_division.rs  tic_tac_toe.rs
src/week2/enums_matching/: binary_tree.rs  creating_patterns.rs  enum_definition1.rs  enum_definition2.rs  errors.rs  matching.rs  mod.rs  result_exercise.rs  safe_division.rs  structural_matching.rs  tic_tac_toe.rs
src/week2/ownership/: binary_tree.rs  brackets.rs  fizzbuzz.rs  fizzbuzzwoofyum.rs  mod.rs  stack.rs  string_theory.rs  strings.rs  vector3_again.rs
src/week3/: bcd.rs  binary_search.rs  lifetimes.rs  mod.rs  ringbuffer.rs
src/week3/collections/: hash_collections.rs  mod.rs  vec_deque.rs
src/week3/iterators/: case_converter.rs  exercises.rs  mod.rs  rle.rs
src/week3/iterators_and_collections/: anon_functions.rs  case_converter.rs  exercises.rs  hash_collections.rs  mod.rs  ringbuffer.rs  tree_iterator.rs
src/week3/traits/: built_in_traits.rs  (+4 more)
src/week4/: bcd.rs  cpu.rs  mod.rs
(+1 files in other folders)
