[package]
name = "software-fundamentals-weekly-assignments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#weblab="0.3.2"
weblab={version="0.3.3", path="/home/jonathan/src/weblab_rs/weblab"}
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8", features = ["std", "std_rng"] }
itertools = "0.10.3"